<resources>
    <string name="app_name">HR Prima</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="cont">CONTINUE</string>

    <string name="slide_1_title">Welcome to HR Prima</string>
    <string name="slide_1_desc">Leverage the Power of the Ultimate HR Application!</string>
    <string name="slide_2_title">Employee Set Up</string>
    <string name="slide_2_desc">Leverage the Power of the Ultimate HR Application!</string>
    <string name="slide_3_title">Payroll Management</string>
    <string name="slide_3_desc">Leverage the Power of the Ultimate HR Application!</string>

    <string name="add_emp">Add Employee</string>
    <string name="delete_emp">Delete Employee</string>
    <string name="list_emp">List Employees</string>
    <string name="update_emp">Update Employee</string>

    <!-- The below two strings represents the open and close operations of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="list_employees_title">List of Employees</string>
    <string name="login_title">Login</string>
    <string name="login_user_id">User Id:</string>
    <string name="login_password">Password:</string>
    <string name="login_e_mail_id">E-mail Id:</string>
    <string name="login_login_btn">Login</string>
    <string name="delete_employee_title">Delete Employee</string>
    <string name="delete_employee_id">Employee Id:</string>
    <string name="delete_delete_btn">Delete</string>
    <!--    Add Employee Fragment-->
    <string name="add_employee_title">Add Employee</string>
    <string name="add_employee_name">Name:</string>
    <string name="add_employee_designation">Designation:</string>
    <string name="add_employee_department">Department:</string>
    <string name="add_employee_email">Email:</string>
    <string name="add_employee_salary">Salary:</string>
    <string name="add_employee_submit">Submit</string>
</resources>


