<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/add_employee_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/add_employee_name"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayDesig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/add_employee_designation"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDesig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayDept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/add_employee_department"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/add_employee_email"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLaySalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/add_employee_salary"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/add_employee_submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>